fixed alignment issues and minor bugs added hover effect on cards"

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#product-card:hover {
+  box-shadow: 0px 5px 10px #b8b8b829;
+}
